--- a/templates/block.hbs
+++ b/templates/block.hbs
@@ -115,35 +115,35 @@
             Entity Summary Information is Loading
         </div>
     {{/if}}
-    {{#if details.summary}}
+    {{#if (and (and details.summary details.summary.summary) (or details.summary.summary.first_seen details.summary.summary.last_seen details.summary.summary.prevalence_count_internal details.summary.summary.tags))}}
         <h1 class="p-title">
             {{fa-icon "brain" fixedWidth=true}}  Entity Summary Details
         </h1>
-            <div class="mb-2">
-                {{#if details.summary.summary.first_seen}}
+        <div class="mb-2">
+            {{#if details.summary.summary.first_seen}}
                 <div>
                     <span class="p-key">First Seen: </span>
                     <span class="p-value">{{details.summary.summary.first_seen}}</span>
                 </div>
-                {{/if}}
-                {{#if details.summary.summary.last_seen}}
+            {{/if}}
+            {{#if details.summary.summary.last_seen}}
                 <div>
                     <span class="p-key">Last Seen: </span>
                     <span class="p-value">{{details.summary.summary.last_seen}}</span>
                 </div>
-                {{/if}}
-                {{#if details.summary.summary.prevalence_count_internal}}
-                    <div>
+            {{/if}}
+            {{#if details.summary.summary.prevalence_count_internal}}
+                <div>
                     <span class="p-key">Prevelance Count: </span>
                     <span class="p-value">{{details.summary.summary.prevalence_count_internal}}</span>
                 </div>
-                {{/if}}
-                {{#if details.summary.summary.tags}}
+            {{/if}}
+            {{#if details.summary.summary.tags}}
                 {{#each details.summary.summary.tags as | tag | }}
                     <span class="tag">{{tag}}</span>
                 {{/each}}
-                {{/if}}
-            </div>
+            {{/if}}
+        </div>
     {{else}}
         <div class="alert alert-info mt-2" role="alert">
             No Entity Summary Information Found
@@ -197,5 +197,9 @@
             {{/if}}
             <hr>
         {{/each}}
+    {{else}}
+        <div class="alert alert-info mt-2" role="alert">
+            No Passive DNS Information Found
+        </div>
     {{/if}}
 {{/if}}
