--- a/templates/summary.hbs
+++ b/templates/summary.hbs
@@ -1,34 +1,34 @@
 {{#if block.data.details.result_count}}
-    <span class="integration-summary-tag integration-background-color integration-border-color">
+    <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
         <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
         <span class="integration-text-color">Number of Detections: {{block.data.details.result_count}}</span>
     </span>
 {{else}}
-    <span class="integration-summary-tag integration-background-color integration-border-color">
+    <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
         <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
         <span class="integration-text-color">Number of Detections: None</span>
     </span>
 {{/if}}
 {{#if block.data.details.summary.first_seen}}
-    <span class="integration-summary-tag integration-background-color integration-border-color">
+    <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
         <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
         <span class="integration-text-color">{{if block.entity.isDomain "Domain" "IP"}} First Seen: {{block.data.details.summary.first_seen}}</span>
     </span>
 {{/if}}
 {{#if block.data.details.summary.last_seen}}
-    <span class="integration-summary-tag integration-background-color integration-border-color">
+    <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
         <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
         <span class="integration-text-color">{{if block.entity.isDomain "Domain" "IP"}} Last Seen: {{block.data.details.summary.last_seen}}</span>
     </span>
 {{/if}}
 {{#if block.data.details.summary.prevalence_count_internal}}
-    <span class="integration-summary-tag integration-background-color integration-border-color">
+    <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
         <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
         <span class="integration-text-color">Prevalence Count: {{block.data.details.summary.prevalence_count_internal}}</span>
     </span>
 {{/if}}
 {{#if block.data.details.summary.summary.prevalence_count_internal}}
-    <span class="integration-summary-tag integration-background-color integration-border-color">
+    <span {{on "click" (optional this.scrollToIntegration)}} class="integration-summary-tag integration-background-color integration-border-color">
         <span class="acronym integration-text-bold-color">{{block.acronym}}</span>
         <span class="integration-text-color">Prevalence Count: {{block.data.details.summary.summary.prevalence_count_internal}}</span>
     </span>
